# scraper

./: .gitignore  CMakeLists.txt  dates.cpp  dates.h  get_openinsider_data.cpp  get_stock_data.py  pyproject.toml  search_result_parsing.cpp  search_result_parsing.h  timing.cpp  timing.h
